--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-swipeable": "^6.1.2",
     "react-transition-group": "4.4.1",
     "swr": "0.5.6"
   },
