--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "clsx": "1.1.1",
     "dayjs": "1.10.4",
+    "ioredis": "^4.27.6",
     "mem": "^8.1.1",
     "next": "latest",
     "react": "^17.0.1",
