--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dayjs": "1.10.4",
     "ioredis": "^4.27.6",
     "mem": "^8.1.1",
-    "next": "latest",
+    "next": "^11.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-swipeable": "^6.1.2",
