--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "swr": "0.5.6"
   },
   "devDependencies": {
+    "algoliasearch": "^4.12.1",
+    "axios": "^0.25.0",
     "eslint": "^7.26.0",
-    "eslint-plugin-react": "^7.23.2"
+    "eslint-plugin-react": "^7.23.2",
+    "googleapis": "39"
   }
 }
