--- a/package.json
+++ b/package.json
@@ -2,19 +2,13 @@
   "name": "zitat",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "res:build": "rescript",
-    "res:clean": "rescript clean",
-    "res:start": "rescript build -w"
+    "start": "next start"
   },
   "dependencies": {
-    "algoliasearch": "^4.12.1",
-    "axios": "^0.25.0",
     "clsx": "1.1.1",
     "dayjs": "1.10.4",
-    "googleapis": "39",
     "ioredis": "^4.27.6",
     "mem": "^8.1.1",
     "next": "^11.1.2",
@@ -25,11 +19,10 @@
     "swr": "0.5.6"
   },
   "devDependencies": {
-    "@rescript/react": "0.10.3",
+    "algoliasearch": "^4.12.1",
+    "axios": "^0.25.0",
     "eslint": "^7.26.0",
     "eslint-plugin-react": "^7.23.2",
-    "gentype": "4.1",
-    "next-transpile-modules": "7.1.2",
-    "rescript": "9.1"
+    "googleapis": "39"
   }
 }
