--- a/package.json
+++ b/package.json
@@ -7,22 +7,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "clsx": "1.1.1",
-    "dayjs": "1.10.4",
-    "ioredis": "^4.27.6",
-    "mem": "^8.1.1",
-    "next": "^11.1.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-swipeable": "^6.1.2",
-    "react-transition-group": "4.4.1",
-    "swr": "0.5.6"
+    "clsx": "1.2.1",
+    "dayjs": "1.11.4",
+    "ioredis": "^5.2.2",
+    "mem": "^9.0.2",
+    "next": "^12.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-swipeable": "^7.0.0",
+    "react-transition-group": "4.4.5",
+    "swr": "1.3.0"
   },
   "devDependencies": {
-    "algoliasearch": "^4.12.1",
-    "axios": "^0.25.0",
-    "eslint": "^7.26.0",
-    "eslint-plugin-react": "^7.23.2",
-    "googleapis": "39"
+    "algoliasearch": "^4.14.2",
+    "axios": "^0.27.2",
+    "eslint": "^8.21.0",
+    "eslint-plugin-react": "^7.30.1"
   }
 }
