--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start"
   },
   "dependencies": {
@@ -12,6 +13,7 @@
     "ioredis": "^5.2.2",
     "mem": "^9.0.2",
     "next": "^12.2.4",
+    "next-sitemap": "^3.1.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-swipeable": "^7.0.0",
