--- a/package.json
+++ b/package.json
@@ -5,25 +5,31 @@
     "dev": "next dev",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "algoliasearch": "^4.14.2",
+    "axios": "^0.27.2",
     "clsx": "1.2.1",
     "dayjs": "1.11.4",
     "ioredis": "^5.2.2",
     "mem": "^9.0.2",
-    "next": "^12.2.4",
+    "next": "13.0.4",
     "next-sitemap": "^3.1.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-swipeable": "^7.0.0",
     "react-transition-group": "4.4.5",
     "swr": "1.3.0"
   },
   "devDependencies": {
-    "algoliasearch": "^4.14.2",
-    "axios": "^0.27.2",
-    "eslint": "^8.21.0",
-    "eslint-plugin-react": "^7.30.1"
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "@types/react-transition-group": "^4.4.5",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.4",
+    "typescript": "4.9.3"
   }
 }
