--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.4",
     "algoliasearch": "^4.14.2",
     "axios": "^0.27.2",
     "clsx": "1.2.1",
