--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-swipeable": "^7.0.0",
     "react-transition-group": "4.4.5",
+    "react-wrap-balancer": "^0.2.4",
     "swr": "1.3.0"
   },
   "devDependencies": {
