--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "knip": "knip"
   },
   "dependencies": {
     "algoliasearch": "^4.14.2",
@@ -28,12 +29,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.14.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.5",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
+    "knip": "^5.27.0",
     "typescript": "5.5.3"
   }
 }
