--- a/package.json
+++ b/package.json
@@ -11,28 +11,21 @@
   },
   "dependencies": {
     "algoliasearch": "^4.14.2",
-    "axios": "^0.27.2",
     "clsx": "1.2.1",
     "dayjs": "1.11.4",
     "ioredis": "^5.2.2",
-    "mem": "^9.0.2",
     "next": "14.2.4",
     "next-sitemap": "^3.1.21",
     "postcss": "^8.4.39",
     "react": "^18",
     "react-dom": "^18",
-    "react-swipeable": "^7.0.0",
-    "react-transition-group": "4.4.5",
     "react-wrap-balancer": "^0.2.4",
-    "swr": "1.3.0",
-    "tailwindcss": "^3.4.4",
-    "zod": "^3.23.8"
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-transition-group": "^4.4.5",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
     "knip": "^5.27.0",
