--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-wrap-balancer": "^0.2.4",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
