--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.4",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "knip": "^5.27.0",
     "typescript": "5.5.3"
   }
