--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "knip": "knip"
   },
   "dependencies": {
-    "algoliasearch": "^4.14.2",
+    "better-sqlite3": "^11.1.2",
     "clsx": "1.2.1",
     "dayjs": "1.11.4",
+    "drizzle-orm": "^0.32.1",
+    "drizzle-zod": "^0.5.1",
     "ioredis": "^5.2.2",
     "next": "14.2.4",
     "next-sitemap": "^3.1.21",
@@ -24,9 +26,12 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^20.14.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "algoliasearch": "^4.24.0",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "knip": "^5.27.0",
