--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "1.11.4",
     "drizzle-orm": "^0.32.1",
     "drizzle-zod": "^0.5.1",
+    "hono": "^4.7.2",
     "ioredis": "^5.2.2",
     "next": "14.2.4",
     "next-sitemap": "^3.1.21",
